web page challenge

--- a/CodeTemplates/HTML/CSS/prison.html
+++ b/CodeTemplates/HTML/CSS/prison.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <style>
-        body{
-            background-color: red;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="prisonStyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,9 +11,7 @@
 </head>
 <body>
     <div class="largeTitle">
-        <h1>Why does the U.S.</h1>
-        <h1><u>lead the world</u></h1>
-        <h1>in incarceration ?</h1>
+   <h1><u>Why does the U.S. lead the world in incarceration ?</u></h1> 
     </div>
     <div class ="par">
         <p>
