--- a/CodeTemplates/JS/index.html
+++ b/CodeTemplates/JS/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <div id = "images">
-        <img src = "greetings from mars.jpeg" alt="Image 1">
+        <img id = "picture" src = "greetings from mars.jpeg" alt="Image 1">
     </div>
     <p>O</p>
     <p>O</p>
